💄 se arreglan estilos para safari y se agregan metas del sitio

--- a/src/app/components/best-works/best-works.component.html
+++ b/src/app/components/best-works/best-works.component.html
@@ -3,85 +3,7 @@
         <div class="col m12 s12 title-container">
             <h1>MIS PROYECTOS</h1>
         </div>
-        <!-- <div id="CARRUSEL" class="col s12 m12">
-            <div class="carousel" #carousel>
-                <div class="carousel-item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator"
-                                src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/foodMap.jpeg?alt=media&token=e0191166-5e97-4e15-a3a5-61b756c89cfb"
-                                href="https://github.com/CaritoDasilva/pinterestChallenge" target="_blank">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">FOODMAP<i
-                                    class="material-icons right">more_vert</i></span>
-                            <p><a href="https://caritodasilva.github.io/scl-2018-01-foodmap/" target="_blank">DEMO</a>
-                                <br>
-                                <a href="https://github.com/CaritoDasilva/scl-2018-01-foodmap"
-                                    target="_blank">CÓDIGO</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">FOODMAP<i
-                                    class="material-icons right">close</i></span>
-                            <p>Es un buscador de comida que geolocaliza comida en los alrededores del usuario. Está
-                                realizada en
-                                Javascript puro y con consumo de la API de HERE. </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator"
-                                src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/markdown.jpeg?alt=media&token=5ae7a7cf-9d65-4e58-a2b5-da63eabf7297"
-                                href="https://github.com/CaritoDasilva/scl-2018-01-FE-markdown" target="_blank">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">MARKDOWN<i
-                                    class="material-icons right">more_vert</i></span>
-                            <p><a href="https://github.com/CaritoDasilva/scl-2018-01-FE-markdown"
-                                    target="_blank">DEMO</a></p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">MARKDOWN<i
-                                    class="material-icons right">close</i></span>
-                            <p>Markdown es una librería Node.Js, encargada de verificar el estado de los links
-                                existentes en los
-                                ReadMe, devolviendo al usuario un mensaje que indica si se encuentran activos y en qué
-                                línea estos se
-                                encuentran.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator"
-                                src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/pinterest.jpeg?alt=media&token=1e26e2b6-f809-49f0-9212-3cca6b3dd8a9"
-                                href="https://github.com/CaritoDasilva/pinterestChallenge" target="_blank">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">PINTEREST CHALLENGE<i
-                                    class="material-icons right">more_vert</i></span>
-                            <p><a href="https://pinterestchallenge-761ba.firebaseapp.com/" target="_blank">DEMO</a>
-                                <br>
-                                <a href="https://github.com/CaritoDasilva/pinterestChallenge" target="_blank">CÓDIGO</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">PINTEREST CHALLENGE<i
-                                    class="material-icons right">close</i></span>
-                            <p>Es una app web que simula a Pinterest realizada en Angular 7 y conectando con una API de
-                                imágenes
-                                que
-                                envía
-                                coincidencias acordes a la búsqueda del Usuario.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+
     </div>
     <div class="row projects-container">
         <div class="col m6 s12 project">
@@ -90,6 +12,7 @@
                 <ul class="tags">
                     <li class="tag">Angular</li>
                     <li class="tag">SCSS</li>
+                    <li class="tag">Bootstrap</li>
                     <li><a href="https://www.bricofem.org/" class="tag demo_link" target="_blank">Demo</a></li>
                 </ul>
 
@@ -123,7 +46,7 @@
                     <li class="tag">Angular</li>
                     <li class="tag">Javascript</li>
                     <li class="tag">Typescript</li>
-                    <li class="tag">Materialize</li>
+                    <li class="tag">Angular Material</li>
                     <li><a href="https://color-picker-61f35.web.app/" class="tag demo_link" target="_blank">Demo</a>
                     </li>
                     <li><a href="https://github.com/CaritoDasilva/color-picker" class="tag demo_link"
