--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -4,10 +4,10 @@
             <h1>TRABAJEMOS JUNTOS</h1>
             <div class="col m8 offset-m2">
                 <div class="row rrss-container">
-                    <div class="col m5 offset-m1">
+                    <div class="col m5 offset-m1 s12">
                         <p>Puedes seguirme por mis redes:</p>
                     </div>
-                    <div class="col m6 btn-container">
+                    <div class="col m6 btn-container s12 rrss">
                         <a href="https://github.com/CaritoDasilva" target="_blank"
                             class="btn-floating btn-large waves-effect z-depth-5 github-icon"><img
                                 src="../../../assets/images/icons8-github.svg" alt=""></a>
@@ -22,11 +22,11 @@
                 </div>
                 <div class="divider"></div>
                 <div class="row rrss-container">
-                    <div class="col m5 offset-m1">
+                    <div class="col m5 offset-m1 s12">
                         <p>También puedes descargar mi CV:</p>
                     </div>
-                    <div class="col m6 btn-container">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/cvCaritoDaSilva.pdf?alt=media&token=412d5300-4913-4465-97d1-5567fc17c904"
+                    <div class="col m6 btn-container s12">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/CaritoDasilvaCV.pdf?alt=media&token=7451b816-fbe8-4986-aa58-d109746f0669"
                             target="_blank" class="btn-floating btn-large waves-effect z-depth-5 pulse btn-cv"><img
                                 src="../../../assets/images/archive.svg" alt=""></a>
                     </div>
