--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,11 @@
             </a>
             <ul>
                 <li><a class="btn-floating" routerLink="" routerLinkActive="active">HOME</a></li>
-                <li><a class="btn-floating" routerLink="/bio" routerLinkActive="active">MyWorld</a></li>
-                <li><a class="btn-floating" routerLink="/conversemos" routerLinkActive="active">LetsTalk</a></li>
-                <li><a class="btn-floating" routerLink="/favorites-codes" routerLinkActive="active">FavoriteCodes</a>
+                <li><a class="btn-floating" routerLink="/conversemos" routerLinkActive="active">Contacto</a></li>
+                <li><a class="btn-floating" routerLink="/bio" routerLinkActive="active">Bio</a></li>
+                <li><a class="btn-floating" routerLink="/favorites-codes" routerLinkActive="active">Proyectos</a>
                 </li>
-                <li><a class="btn-floating" routerLink="/CaritoDaSilvaCV" routerLinkActive="active">Descarga CV</a></li>
+                <li><a class="btn-floating" routerLink="/CaritoDaSilvaCV" routerLinkActive="active">CV</a></li>
             </ul>
         </div>
     </div>
