--- a/src/app/components/carito-da-silva-cv/carito-da-silva-cv.component.html
+++ b/src/app/components/carito-da-silva-cv/carito-da-silva-cv.component.html
@@ -49,7 +49,7 @@
                             </div>
                             <div class="description section">
                                 <main>
-                                    <div class="experiences">
+                                    <div class="experiences y2019">
                                         <h5>GO CLOUD</h5>
                                         <p>
                                             Desarrolladora Junior en software de IA
@@ -58,7 +58,7 @@
                                             backend, apoyé en varias áreas.
                                         </p>
                                     </div>
-                                    <div class="experiences">
+                                    <div class="experiences y2020">
                                         <h5>IMPORT CLUB</h5>
                                         <p>
                                             Desarrolladora Front End,
@@ -67,7 +67,7 @@
                                             mejoras en el portal público e interno.
                                         </p>
                                     </div>
-                                    <div class="experiences">
+                                    <div class="experiences y2021">
                                         <h5>CLEVER IT</h5>
                                         <p>
                                             Desarrolladora Front End,
@@ -194,8 +194,8 @@
         </div>
         <div class="row">
             <div class="btn-download-container">
-                <a href="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/cvCaritoDaSilva.pdf?alt=media&token=412d5300-4913-4465-97d1-5567fc17c904"
-                    class="title-sectionwaves-effect waves-light btn btn-download">
+                <a href="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/CaritoDasilvaCV.pdf?alt=media&token=7451b816-fbe8-4986-aa58-d109746f0669"
+                    target="_blank" class="title-sectionwaves-effect waves-light btn btn-download">
                     DESCARGAR PDF
                 </a>
 
